manifest/objects/ALTF__Account_Hierarchy__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Hierarchy Accounts</relationshipLabel>
        <relationshipName>Altify_Hierarchy_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ALTF__Alias__c</fullName>
        <defaultValue>false</defaultValue>
        <description>An alias for another account</description>
        <inlineHelpText>When you have two or more accounts that actually refers to one then one is primary while others are aliases</inlineHelpText>
        <label>Alias</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Include__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Include Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Altify Include Accounts</relationshipLabel>
        <relationshipName>Altify_Include_Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__IsDirty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDirty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__IsMaster__c</fullName>
        <description>Each account should have one entry that refers to itself.</description>
        <formula>ALTF__Account__c = ALTF__Include__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Each account should have one entry that refers to itself.</inlineHelpText>
        <label>IsMaster</label>
        <type>Checkbox</type>
    </fields>
    <label>Altify Account Hierarchy</label>
    <nameField>
        <label>Account Hierarchy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Account Hierarchies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>